central table dataset will be named after argument given for the dataset parameter

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,7 +40,7 @@ tests:
 
 # Centralize test after every dbt run
 on-run-end:
-  - "{{ centralize_test_results(results, tests) }}"  
+  - "{{ centralize_test_results(results, 'tests') }}"  
 
 
 
